@@ -1,3 +1,7 @@
+2007-09-10  Dmitry Dulepov  <dmitry@typo3.org>
+
+ * Added autoconfiguration feature
+
 2007-07-09  Dmitry Dulepov  <dmitry@typo3.org>
 
  * Fixed error in regular expression
